# haskell-irc-elasticsearch

./: Indexer.hs  README.md  haskell-irc.cabal
